# clause_info_extraction

./: .gitignore  API_INTEGRATION.md  PROJECT_OVERVIEW.md  README.md  SERVICE1_API.md  pyproject.toml  request_api_demo.py  sglang_request.py  test_contract_ratio_summary.py  test_single_clause.py
clause_data-flywheel/: bos_extraction_to_excel.py  bos_sample_conf.py
clause_data-flywheel/extraction_summary/: extraction_summary.xlsx
prompts/: 项目接口功能检查-吴宗振.md
service2_payment_extractor/: .dockerignore  .env.example  .gitignore  5_11-5_17_修改.md  AGENTS.md  AUDIT_REPORT_2026.md  AUDIT_REPORT_2026_v2.md  CODE_REVIEW_payment_info_extractor_node.md  Dockerfile  PIPELINE_COMPLEXITY_ASSESSMENT.md  README.md  SERVICE2_API.md  _verify_prompt_changes.py  main.py  payment_extraction_flow.drawio  pyproject.toml  test_service2_standalone.py  付款信息提取技术笔记.md  节点映射.xlsx
service2_payment_extractor/app/: api.py
service2_payment_extractor/app/agents/: aggregator_node.py  comparison_node.py  output_node.py  payment_info_extractor_node.py
service2_payment_extractor/app/config/: business_dict.py  config.py  config_models.py  env_config.py  graph_config.py  prompts.py  prompts_loader.py
service2_payment_extractor/app/graphs/: workflow_graph.py
service2_payment_extractor/app/resources/business_dict/: v1.yaml
service2_payment_extractor/app/resources/prompts/: README.md
service2_payment_extractor/app/states/: states.py
service2_payment_extractor/app/utils/: bos_helper.py  comparison_helper.py  concurrency.py  contract_price_comparator.py  debug_helper.py  log_redact.py  node_decorator.py  observability.py  payment_ratio_extractor.py  rag_retriever.py  token_counter.py
service2_payment_extractor/app/utils/payment_ratio/: __init__.py
service2_payment_extractor/付款信息提取完整流程图/: 付款信息提取完整流程图.drawio  付款信息提取完整流程图.html
web_ui/: .gitignore  CHANGELOG.md  README.md  app.py  config.py  history_store.py  pipeline.py  requirements.txt
web_ui/static/: app.js  style.css
web_ui/templates/: index.html
