# ===== 文件：pyproject.toml =====

[project]
name = "clause_agent"
version = "0.0.1"
description = "Backend for the LangGraph agent"
authors = [
    { name = "Zhu Yichen", email = "zhuyichen@smec.com" },
    { name = "Niu Zihan", email = "niuzihan@smec.com" },
    { name = "Wu Zongzhen", email = "wuzongzhen@smec.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "loguru>=0.7.3",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.1",

    "langchain>=0.3.19",
    "langgraph>=0.2.6",
    "langchain-openai",
    "langchain-community",
    
    "fastapi",
    "uvicorn[standard]", 
    "gunicorn",
    "python-multipart",
    "aiofiles",
    "httpx>=0.27.0",
    
    "langgraph-sdk>=0.1.57",

    "bce-python-sdk>=0.9.35",
    "pycryptodome>=3.18.0",

    "deepmerge>=1.1.0",
    "jieba>=0.42.1",
    "rank-bm25>=0.2.2",
    "pymilvus>=2.4.4",
    "grpcio-status==1.67.1",

    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.25.1",

    "bert-score>=0.3.13",
    "torch",
    "transformers"
]

[project.optional-dependencies]
dev = [
    "mypy>=1.11.1",
    "ruff>=0.6.1",
    "langgraph-cli[inmem]>=0.1.71",
    "pytest>=8.3.5",
    "pytest-asyncio"
]

[build-system]
requires = ["setuptools>=73.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
lint.select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
lint.ignore = [
    "UP006",
    "UP007",
    # We actually do want to import from typing_extensions
    "UP035",
    # Relax the convention by _not_ requiring documentation for every function parameter.
    "D417",
    "E501",
]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D", "UP"]
[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
asyncio_mode = "auto"